# imac2-worldIMaker

./: .gitignore  CMakeLists.txt  README.md  explication.txt
CMake/: FindSDL2.cmake
assets/doc/: controls.txt  inverse_multi.txt  multiquadratic.txt  otherControls.txt  space.txt  test.txt  test1.txt  test2.txt  world.txt
doc/: CMakeLists.txt  Doxyfile-html.cmake
lib/glimac/include/: GameController.hpp
lib/glimac/include/glimac/: Cube.hpp  CubeData.hpp  Cursor.hpp  File.hpp  FilePath.hpp  FreeFlyCamera.hpp  GameController.hpp  Geometry.hpp  Menu.hpp  Model.hpp  Overlay.hpp  PlayerController.hpp  Program.hpp  SDLWindowManager.hpp  Scene.hpp  Shader.hpp  Texture.hpp  TrackballCamera.hpp  common.hpp  gl-exception.hpp  main.hpp  rbf.hpp
lib/glimac/src/: Cube.cpp  Cursor.cpp  File.cpp  FreeflyCamera.cpp  GameController.cpp  Menu.cpp  Overlay.cpp  PlayerController.cpp  Program.cpp  SDLWindowManager.cpp  Scene.cpp  Texture.cpp  TrackballCamera.cpp  gl-exception.cpp  rbf.cpp
shaders/: 3D.vs.glsl  colorCube.fs.glsl  colorCube.vs.glsl  multiTex3D.fs.glsl  normal.fs.glsl  tex3D.fs.glsl  texture.fs.glsl  texture.vs.glsl  texturedCube.fs.glsl  texturedCube.vs.glsl
src/: SDLtemplate.cpp  Sound.cpp  Sound.hpp  main.cpp
src/include/: Cube.hpp  VectorD.hpp
src/src/: Cube.cpp  freefly_camera.cpp
